# NonomiBeat

./: .gitignore  README.md  install.sh  pyproject.toml
src/: __main__.py
src/nonomi/audio/: audio.py
src/nonomi/core/: core.py
src/nonomi/input/: cam.py
src/nonomi/patches/: main.pd  main2.pd  main3.pd
